<resources>
    <string name="app_name">1 Sleep Yoga</string>
    <string name="picker_box_arrows_icon">picker box arrows icon</string>
    <string name="favtitle">Add your favourite workouts here.❤customise your own training plans based on your preferences.</string>
    <string name="mon">Monday</string>
    <string name="tu">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thri">Thrusday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="facebook_app_id">394103198201105</string>
    <string name="exename1">Cat Cow Pose (Majaryasana – Bitilasana) </string>
    <string name="exename2">Bhastrika Pranayama Yoga</string>
    <string name="exename3">Reclining Bound Angle Pose (Supta Baddha Konasana)</string>
    <string name="exename4">Sitting half spinal twist pose (Ardha Matsyendrasana)</string>
    <string name="exename5">Seated Wide Angle Pose (Upavistha Konasana)</string>
    <string name="exename6">Shanmukhi mudra</string>
    <string name="exename7">Wind-Relieving pose (Pavanamuktasana) </string>
    <string name="exename8">Thread to Needle (Parsva Balasana)</string>
    <string name="exename9">Plow Pose (Halasan)</string>
    <string name="exename10">Hero Pose (Virasana )</string>
    <string name="exename11">Nadi Shodhan Pranayam</string>
    <string name="exename12">Thunderbolt Pose (Vajrasana)</string>
    <string name="exename13">Lord of the Dance Pose (Natarajasana)</string>
    <string name="exename14">Vakrasana (Half Spinal Twist Pose)</string>
    <string name="exename15">Child pose (Hare Pose) (Balasana) </string>
    <string name="exename16">kapalbhati Pranayama</string>
    <string name="exename17">Seated Forward Bend (Paschimottanasana)</string>
    <string name="exename18">Legs up the Wall Pose (Viparita Karani)</string>
    <string name="exename19">Forward Bend (Hasta Padasana)</string>
    <string name="exename20">Mountain Pose (Tadasan)</string>
    <string name="exename21">Supine Spinal Twist (Supta Matsyendrasana)</string>
    <string name="exename22">Chair pose (Utkatasana) </string>
    <string name="exename23">Fish Pose (Matsyasanaa)</string>
    <string name="exename24">Celibate’s Pose (Brahmacharyasana)</string>
    <string name="exename25">Head-to-knee forward bend (Janu Sirsasana)</string>
    <string name="exedesc1">It stretches the back torso and neck, and softly stimulates and strengthens the abdominal organs. It brings the spine into correct alignment and can help prevent back pain when practiced regularly.</string>
    <string name="exedesc2">Great for lungs and people who suffer from repetitive cough, flu, respiratory issues, allergies or breathlessness.The increased blood supply to the head improves eyesight and hearing. The lungs are strengthened and it is beneficial for bronchitis, as the respiratory system is quickly and deeply purified.•It is great for energizing the body and the mind</string>
    <string name="exedesc3">It soothes the digestive and the reproductive systems and treats conditions like irritable bowel disease, infertility, menstrual disorders, digestive issues, menopause, etc.•It gives your groins, internal thighs, and knees a good stretch.•It reduces muscle tension and relieves you from tiredness and insomnia. It also calms the mind </string>
    <string name="exedesc4">It providing nutrients, blood, and oxygen, and improving the health of the reproductive system as well as the urinary system.Beneficial for menstrual disorders and Energizes the spine,•Stimulates the liver and kidneys </string>
    <string name="exedesc5">It Stimulates the abdominal organs.Strengthens and tones the abs, spine and legs.•Helps to cure and relieve sciatica and arthritis.It detoxifies the kidneys.
 </string>
    <string name="exedesc6">Great for facial muscles and appearance as the heat and prana of the hands and fingers stimulates and relaxes facial muscles.•Useful for managing anxiety and removing negative intellectual patterns.•It stimulates sensory organs and later stages sense withdrawal.•Brings about focus, introversion and calmness </string>
    <string name="exedesc7">Stretches and strengthens the back and abdominal muscles.•Helps in digestion and release of gas. Trigger the burning of fat.•Tones the muscles in the legs and arms.•Improves blood circulation in the hip joints</string>
    <string name="exedesc8">It stretches your upper chest muscles gently.•It opens the upper and outer muscles of your shoulder.•It Increase the blood circulation to the upper extremities. </string>
    <string name="exedesc9">It encourages flexibility of the back and stretches the muscles along the back of the legs. •It strengthens and opens up the neck, shoulders, abs and back muscles </string>
    <string name="exedesc10">It strengthens the arms and shoulders and keeps the spine flexible.It Nourishes the brain with more blood. </string>
    <string name="exedesc11">It also helps to alleviate respiratory allergies that cause hay fever, sneezing, or wheezing•Helps harmonize the left and right hemispheres of the brain, which correlates to the logical and emotional sides of our personality.</string>
    <string name="exedesc12">Improves digestion and combats constipation, and acidity.•Alleviates menstrual disorder.•Regulates the functioning of reproductive organs and thyroid gland.•Strengthens the pelvic muscles </string>
    <string name="exedesc13">The pose symbolizes Cosmic Energy, and when you do you are dancing in the flow of the Universe.•Stretches and strengthens the chest, shoulders, quadriceps, front body, including the abdomen.•Stretches the upper back, quadriceps, ankles, feet, thighs, groins, and stomach•Improves balance </string>
    <string name="exedesc14">Stimulate the heart, kidneys, liver, spleen, and lungs.•It helps to reduce belly fat, strengthens kidney, •It helps to prevent and control diabetes.•It strengthens back muscles and reduces back ache </string>
    <string name="exedesc15">Helpful in getting rid of constipation.•This leads to the well-functioning of adrenal glands. Stretches the back muscles making them stronger.•Enhances the health of both male and female reproductive organs  </string>
    <string name="exedesc16">Increases the metabolic rate and helps in weight loss•Improves digestive tract functioning, absorption, and assimilation of nutrients•Energizes the nervous system and rejuvenates brain cells•Improves blood circulation and adds glow to the face•It stimulates abdominal organs and thus is extremely useful to those with diabetes•Improves memory and concentration power </string>
    <string name="exedesc17">It stimulates the functioning of pineal, hypothalamus and pituitary glands and help to secret Growth hormone which is responsible for Height. •It strengthens muscles of the back, shoulders and arm. </string>
    <string name="exedesc18">Relieves tired or cramped legs and feet•Alleviates headaches•Relieves lower-back pain•Calms the mind
 </string>
    <string name="exedesc19">It revitalizes the nervous system and promotes proper blood circulation in pituitary gland which release Growth hormone responsible for height. It stretches the back and lower body muscles with spine as well. </string>
    <string name="exedesc20">It tones the leg muscles, ends stiffness in legs and hips, remedies backache and sprains of the neck, develops the chest and strengthens the ankles.</string>
    <string name="exedesc21">Knee down twist stretches the back realigns, muscles, and lengthens the spine, and hydrates the backbone disks.•It gives your shoulders, chest, middle spine, hips, lower back, and upper back a good stretch.•Encourages fresh blood flow to the internal organs and offers a complete detox to your internal organs </string>
    <string name="exedesc22">Stretches and strengthens the back and abdominal muscles.•Helps in digestion and release of gas. Trigger the burning of fat.•Tones the muscles in the legs and arms.•Improves blood circulation in the hip joints.</string>
    <string name="exedesc23">Relieves tension in your neck, throat, and shoulders. Stretches and stimulates the organs of your belly and throat.
 </string>
    <string name="exedesc24">Increases the metabolic rate and helps in weight loss.Improves digestive tract functioning, absorption, and assimilation of nutrients.Energizes the nervous system and rejuvenates brain cells.Improves blood circulation and adds glow to the face.It stimulates abdominal organs and thus is extremely useful to those with diabetes.Improves memory and concentration power. </string>
    <string name="exedesc25">It totally stretches your hamstrings, shoulders, calves, arches, hands, and spine while building strength in your arms, shoulders, and legs. It stimulates blood circulation. It’s perfect exercise for whole body stretching to increase height.</string>
    <string name="exeyouvid1">kqnua4rHVVA</string>
    <string name="exeyouvid2">TsYT02UnkMA</string>
    <string name="exeyouvid3">Ay_s_a7L9T4</string>
    <string name="exeyouvid4">51EqCa6ZGCw</string>
    <string name="exeyouvid5">TsCxqXU9g0Q</string>
    <string name="exeyouvid6">ibfX5IGqrU4</string>
    <string name="exeyouvid7">YMO8QRprW2w</string>
    <string name="exeyouvid8">UCjqxT4YzXo</string>
    <string name="exeyouvid9">zE0IhWwRt8s</string>
    <string name="exeyouvid10">8vtA2nnxoEI</string>
    <string name="exeyouvid11">TSvxys_Ywq0</string>
    <string name="exeyouvid12">QSUe1ElVcMI</string>
    <string name="exeyouvid13">yw6NpUtK48A</string>
    <string name="exeyouvid14">Qo2FokvUj6M</string>
    <string name="exeyouvid15">2MJGg-dUKh0</string>
    <string name="exeyouvid16">1d3erUbB3uw</string>
    <string name="exeyouvid17">T8sgVyF4Ux4</string>
    <string name="exeyouvid18">DzONedGzUzY</string>
    <string name="exeyouvid19">SnoFGPZTjs0</string>
    <string name="exeyouvid20">NKp9DvzzZTo</string>
    <string name="exeyouvid21">G28BnPX-tlA</string>
    <string name="exeyouvid22">Kp7XJkG9ubc</string>
    <string name="exeyouvid23">3CnPUfZsIwg</string>
    <string name="exeyouvid24">_wKvqBbmvls</string>
    <string name="exeyouvid25">qLPRDus9zzg</string>
    <string name="exeyouvid26">xyIAT7XzAe4</string>
    <string name="exeyouvid27">wdln9qWYloU</string>
    <string name="exeyouvid28">3CnPUfZsIwg</string>
    <string name="exeyouvid29">U2oimBogB4k</string>
    <string name="totaltime">6</string>
    <string name="round1time">20</string>
    <string name="watch_video_to_unlock">WATCH VIDEO TO UNLOCK</string>
    <string name="unlock_free">Unlock Free</string>
    <string name="or">or</string>
    <string name="watch_the_video_to_use_training_nplan_once">Watch the video to use training \nplan once</string>
    <string name="get_premium">Get Premium</string>
    <string name="choose_your_language">Choose your Language:-</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="chinise">中文</string>
    <string name="french">français</string>
    <string name="arabic">عربي</string>
    <string name="thai">คนไทย</string>
    <string name="portuguese">português</string>
    <string name="russian">русский</string>
    <string name="spanish">española</string>
    <string name="italian">Italiana</string>
    <string name="turkish">Türkçe</string>
    <string name="dutch">Nederlands</string>
    <string name="korean">한국인</string>
    <string name="swedish">svenska</string>
    <string name="danish">dansk</string>
    <string name="bengali">বাংলা</string>
    <string name="tamil">தமிழ்</string>
    <string name="telugu">తెలుగు</string>
    <string name="punjabi">ਪੰਜਾਬੀ</string>
    <string name="persian">فارسی</string>
    <string name="polish">Polskie</string>
    <string name="submit">Submit</string>
    <string name="want_uninterrupted">want uninterrupted ad-free workout?\n GET PREMIUM NOW!</string>
</resources>