<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/btnadd"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dialogbg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:fontFamily="@font/fontr_r"
                android:gravity="center"
                android:text="@string/choose_your_language"
                android:textColor="@color/headercolor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_below="@+id/t1"
                android:background="@color/smalltxtcolor" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="60dp">

                        <RadioButton
                            android:id="@+id/renglish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"

                            android:buttonTint="@color/tbtncolor"
                            android:checked="true"
                            android:fontFamily="@font/fontr_r"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/english"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rhindi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"

                            android:fontFamily="@font/fontr_r"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/hindi"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rfrench"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/french"

                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rchinish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/chinise"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            />

                        <RadioButton
                            android:id="@+id/rpotugues"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/portuguese"

                            android:textColor="@color/black"
                            android:textSize="20sp" />


                        <RadioButton
                            android:id="@+id/rrussian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/russian"

                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/aarbic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/arabic"
                            android:textColor="@color/black"
                            android:textSize="20sp" />


                        <RadioButton
                            android:id="@+id/spanish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/spanish"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rthai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/thai"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/ritalian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/italian"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rturkish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/turkish"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rkorean"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/korean"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rdutch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/dutch"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                        <RadioButton
                            android:id="@+id/persian"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/persian"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                        <RadioButton
                            android:id="@+id/rswedish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/swedish"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rdanish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/danish"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rbengali"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/bengali"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rtamil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/tamil"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rtelugu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/telugu"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rpunjabi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/punjabi"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rpolish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:buttonTint="@color/tbtncolor"
                            android:checked="false"
                            android:fontFamily="@font/fontr_r"
                            android:text="@string/polish"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </RadioGroup>


                </RelativeLayout>

            </ScrollView>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/gradbtn"
                android:fontFamily="@font/fontr_r"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>